# Bootcamps_e_Intensivoes

./: .gitignore  Dockerfile  README.md
Arquivos_txt/: hosts.txt  ocultar.txt
Bootcamp_Atlantico_Machine_Learning/: README.md  pyproject.toml
Bootcamp_Atlantico_Machine_Learning/bootcamp/: __main__.py
Bootcamp_Atlantico_Machine_Learning/bootcamp/atividades/modulo_1/respostas/: questao_1.py
Bootcamp_Atlantico_Machine_Learning/bootcamp/models/: questao.py  resolucao.py
Bootcamp_Atlantico_Machine_Learning/bootcamp/utils/: leitor_de_questoes.py
Bootcamp_Atlantico_Machine_Learning/modulos/modulo_1/: questoes.json
Bootcamp_Cognizant_Cloud_Data/Arquivos_txt/: hash_a.txt
Bootcamp_Cognizant_Cloud_Data/Consultas_do_curso_de_MySQL/: querys_curso_01_sql_dio.sql  (+1 more)
Fundamentos_ETL_com_python/: limpeza.ipynb  transformacao.ipynb
Imersao_Full_Stack_e_Full_Cycle/: README.md
Imersao_Full_Stack_e_Full_Cycle/area_admin/: docker-compose.yaml  pyproject.toml
Imersao_Full_Stack_e_Full_Cycle/area_admin/core/: admin.py  apps.py  form.py  models.py  services.py
Imersao_Full_Stack_e_Full_Cycle/area_admin/core/migrations/: 0001_initial.py  0002_remove_video_author.py  0003_video_author.py
Imersao_Full_Stack_e_Full_Cycle/area_admin/core/templates/admin/core/: upload_video.html
Imersao_Full_Stack_e_Full_Cycle/area_admin/videos/: settings.py
Intensivao_Go/: README.md  go.mod  go.sum  main.go
Projeto_CSS/: index.html  style.css
Seguranca_informacao_com_python/: cliente_tcp.py  comparador_hashs.py  conexoes_ping.py  gerador_senhas.py  manipulando_ips.py  ocultador_arquivos.py  server_udp.py  verificador_ip.py  web_scraping.py
TypeScript_/: package.json  tsconfig.json
chatservice/: docker-compose.yaml  go.mod  go.sum
(+115 files in other folders)
