[tool.poetry]
name = "area-admin"
version = "0.1.0"
description = ""
authors = ["Lyarkh <lcemanuel.emanuel@gmail.com>"]
license = "MIT"
readme = "../README.md"

[tool.poetry.dependencies]
python = "3.12.*"
django = "5.1.2"
psycopg2-binary = "2.9.9"
pillow = "10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
